Fixed bug #37251 (deadlock when custom error handler is to catch array type hint error).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@212485 c90b9560-bf6c-de11-be94-00142212c4b1